Change toogle button to slide toogle, add wrap to aggregate cards and fix button colors
Former-commit-id: 99717fae76a88ade060459cf35c0fb865bc33a3c
Former-commit-id: 32f8210a8b7c16fb756e724cd143fa088e79e078

--- a/user-interface/src/app/steps/model/aggregates-settings/aggregates-settings.component.css
+++ b/user-interface/src/app/steps/model/aggregates-settings/aggregates-settings.component.css
@@ -7,24 +7,21 @@
   margin-top: 2%;
   margin-left: 4%;
   max-width: 300px;
-  /* border-right: 1px solid #b3b3b3;
-  border-left: 1px solid #b3b3b3;
-  padding-left: 15px;
-  padding-right: 15px; */
   display: flex;
   flex-direction: column;
+  overflow-wrap: break-word;
+  max-height: 200px;
+  line-break: anywhere;
 }
 
 .event-card {
   margin-top: 4%;
   background-color: #fd7e14;
-  height: 45px;
 }
 
 .api-card {
   margin-top: 2%;
   background-color: #64B5F6;
-  height: 45px;
 }
 
 .aggregate .GET {
